
[package]
name = "sajuuk"
version = "0.1.0"
edition = "2021"
description = "A modern, extensible loadbalancer written in Rust"
authors = ["Rich Edelman <redelman@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/redelman/sajuuk"

[features]
default = []

[dependencies]
async-trait = { version = "0.1.83" }
clap = { version = "4.5.21", features = ["derive"] }
opentelemetry = { version = "0.27.1", features = ["metrics"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.93"

[dev-dependencies]
tempfile = "3.10"
